# document

./: .buildinfo  .gitignore  Makefile  README.html  _config.yml  _toc.yml  build.sh  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js
.github/workflows/: jekyll.yml
_sources/: README.md  intro.md
develop/design_pattern/: index.html  index.md  observer_pattern.html
docs/: .buildinfo  Untitled.html  doc1.html  genindex.html  hello.html  hierarchy.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: Untitled.doctree  doc1.doctree  environment.pickle  hello.doctree  hierarchy.doctree  index.doctree
docs/_sources/: Untitled.ipynb.txt  index.md.txt  index.rst.txt
research/bayesian_inference/: belief_propagation.html  belief_propagation.ipynb  index.html
research/combinatorial_optimization/: index.html  index.md
research/data_structure/: index.html  index.md
research/graph_theory/: elimination_graph.html  elimination_graph.md  index.html  index.md  modularity.html  modularity.md
research/machine_learning/: differential_privacy.html  differential_privacy.md  federated_learning.html  federated_learning.md  index.html  index.md  simple_perceptron.html  simple_perceptron.ipynb
research/mathematical_optimization/: column_generation_vrp.html  column_generation_vrp.ipynb  index.html
research/numerical_calculation/: index.html  sparse_simultaneous_equations.html  sparse_simultaneous_equations.md  (+1 more)
source/: conf.py  doc1.md  hierarchy.rst  index.rst
(+71 files in other folders)
