[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["mullzhang <mullzhang@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyter-book = "^0.11.1"
ghp-import = "^2.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
dwave-ocean-sdk = "^4.2.0"
plotly = "^5.4.0"
tqdm = "^4.62.3"
scipy = "^1.7.3"
opencv-python = "^4.5.5"
scikit-learn = "^1.0.2"
scikit-image = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
