[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["mullzhang <mullzhang@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.0"
ghp-import = "^2.1.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
dwave-ocean-sdk = "^6.10.0"
plotly = "^5.22.0"
tqdm = "^4.66.4"
scipy = "^1.13.0"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.5.0"
scikit-image = "^0.23.2"
pulp = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
